Revision history for Perl distribution libnet

3.03 Development

    - Fixed a broken port() call in pasv_xfer()/pasv_xfer_unique() in Net::FTP.
      [Mario Preksavec, PR#8]

    - Increased minimum required Socket version from 1.3 to 2.016.  This may be
      required when those modules that can support IPv6 load IO::Socket::IP (on
      some OSes, at least).  It does not appear to be necessary if they load
      IO::Socket::INET6 or IO::Socket::INET instead, but this is not easy for
      the end-user to control so it is simpler to always insist on Socket 2.016
      or higher.  [CPAN RT#100020]

    - Fixed "Argument ... isn't numeric in subroutine entry" warnings when using
      older versions of Perl.  [CPAN RT#100020]

    - Added optional Changes testing (skipped unless AUTHOR_TESTING).

    - Reformatted Changes file as per CPAN::Changes::Spec.

3.02 2014-10-10

    - Don't run interactive prompt() in Makefile.PL when in PERL_CORE.

    - Fix $smtp->auth($sasl) to try the AUTH mechanism (if present) in the
      Authen::SASL object before falling back on other mechanisms.  [CPAN
      RT#99415]

3.01 2014-10-09

    - Require IO::Socket::SSL >= 1.999 to protect against a bad version (0.30)
      of IO::Socket::IP and hopefully fix another bunch of CPAN Testers
      failures.

3.00 2014-10-09

    - Skip Perl Critic, Pod and Pod Coverage tests unless AUTHOR_TESTING.  [CPAN
      RT#99399]

    - Synchronize all $VERSIONs to the distribution's version number, bumping
      that to 3.00 so that no $VERSIONs end up going backwards.

1.30 2014-10-08

    - Sigh. Fix PAUSE indexing problem again. Net::SMTP::SSL is already used by
      Net-SMTP-SSL.

1.29 2014-10-08

    - Fix PAUSE indexing problem. Net::POP3::_SSLified and Net::SMTP::_SSLified
      are already used by Net-SSLGlue.

1.28 2014-10-08

    - Improve code()/message() initialization and error handling in Net::Cmd.
      [Tom Metro, CPAN RT#14875]
