@@ -27,11 +27,11 @@ my $ssl_class = eval {
   require IO::Socket::SSL;
   # first version with default CA on most platforms
   no warnings 'numeric';
-  IO::Socket::SSL->VERSION(1.999);
+  IO::Socket::SSL->VERSION(2.007);
 } && 'IO::Socket::SSL';
 
 my $nossl_warn = !$ssl_class &&
-  'To use SSL please install IO::Socket::SSL with version>=1.999';
+  'To use SSL please install IO::Socket::SSL with version>=2.007';
 
 # Code for detecting if we can use IPv6
 my $inet6_class = eval {
