@@ -54,7 +54,7 @@ which requires Convert::EBCDIC.
 
 Authen::SASL is required for AUTH support.
 
-IO::Socket::SSL version 1.999 or higher is required for SSL support.
+IO::Socket::SSL version 2.007 or higher is required for SSL support.
 
 IO::Socket::IP version 0.20 or IO::Socket::INET6 version 2.62 is
 required for IPv6 support.
